tests/ui/self/invalid-self-dyn-receiver.stderr
error[E0307]: invalid `self` parameter type: `&dyn Bar`
  --> $DIR/invalid-self-dyn-receiver.rs:10:21
   |
LL |     fn method(self: &dyn Bar) {}
   |                     ^^^^^^^^
   |
   = note: type of `self` must be `Self` or some type implementing `Receiver`
   = help: consider changing to `self`, `&self`, `&mut self`, or a type implementing `Receiver` such as `self: Box<Self>`, `self: Rc<Self>`, or `self: Arc<Self>`

error[E0283]: type annotations needed
  --> $DIR/invalid-self-dyn-receiver.rs:17:7
   |
LL |     x.method();
   |       ^^^^^^
   |
   = note: cannot satisfy `_: Foo`
help: try using a fully qualified path to specify the expected types
   |
LL -     x.method();
LL +     <_ as Foo>::method(x);
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0283, E0307.
For more information about an error, try `rustc --explain E0283`.
